// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Badge / NotificationBadge Badge with animation 1`] = `
.c4 {
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: transparent;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #336BFF;
  height: 24px;
  min-width: 24px;
  border-radius: 24px;
}

.c10 {
  -webkit-animation: scale 0.5s ease-out;
  animation: scale 0.5s ease-out;
  padding: 0 6px;
}

.c12 {
  padding: 0 6px;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: transparent;
  color: #336BFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #336BFF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c7:hover {
  color: #2650BF;
}

.c7:hover::before {
  border-color: #2650BF;
}

.c7:active {
  color: #1F4099;
}

.c7:active::before {
  border-color: #1F4099;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c6 {
  width: 200px;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Badge with animation
      </span>
    </div>
    <div>
      <div
        className="c4"
      >
        <div
          className="c5 c6"
        >
          <button
            className="NormalizedButton__Button-sc-ey7f5x-0 c7"
            onClick={[Function]}
            type="button"
          >
            <span>
              <span
                className="c8"
              >
                -
              </span>
            </span>
          </button>
          <span
            className="c9 c10"
          >
            <span
              className="c11"
            >
              4
            </span>
          </span>
          <button
            className="NormalizedButton__Button-sc-ey7f5x-0 c7"
            onClick={[Function]}
            type="button"
          >
            <span>
              <span
                className="c8"
              >
                +
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Badge with animation, but without initial animation example
      </span>
    </div>
    <div>
      <div
        className="c4"
      >
        <div
          className="c5 c6"
        >
          <button
            className="NormalizedButton__Button-sc-ey7f5x-0 c7"
            onClick={[Function]}
            type="button"
          >
            <span>
              <span
                className="c8"
              >
                -
              </span>
            </span>
          </button>
          <span
            className="c9 c12"
          >
            <span
              className="c11"
            >
              4
            </span>
          </span>
          <button
            className="NormalizedButton__Button-sc-ey7f5x-0 c7"
            onClick={[Function]}
            type="button"
          >
            <span>
              <span
                className="c8"
              >
                +
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Badge / NotificationBadge Common use cases 1`] = `
.c7 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #336BFF;
  height: 24px;
  min-width: 24px;
  border-radius: 24px;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #336BFF;
  height: 8px;
  min-width: 8px;
  border-radius: 8px;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #FF1900;
  height: 8px;
  min-width: 8px;
  border-radius: 8px;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #6E6E69;
  height: 8px;
  min-width: 8px;
  border-radius: 8px;
}

.c5 {
  padding: 0 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Number with limit
      </span>
    </div>
    <div>
      <span
        className="c4 c5"
      >
        <span
          className="c6"
        >
          99+
        </span>
      </span>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Text with Badge
      </span>
    </div>
    <div>
      <div
        className="c7"
      >
        <span
          className="c3"
        >
          Orders 
          <span
            className="c4 c5"
          >
            <span
              className="c6"
            >
              7
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Text with extra small Badge
      </span>
    </div>
    <div>
      <div
        className="c7"
      >
        <div
          className="c7"
        >
          <span
            className="c8 "
          />
          <span
            className="c9"
          >
             Buy order
          </span>
        </div>
        <div
          className="c7"
        >
          <span
            className="c10 "
          />
          <span
            className="c9"
          >
             Sell order
          </span>
        </div>
        <div
          className="c7"
        >
          <span
            className="c11 "
          />
          <span
            className="c9"
          >
             Exchange order
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Badge with Aria-label
      </span>
    </div>
    <div>
      <div
        className="c7"
      >
        <span
          className="c3"
        >
          Orders
           
          <span
            aria-label="7 new orders"
            className="c4 c5"
          >
            <span
              className="c6"
            >
              7
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Badge without Aria-label
      </span>
    </div>
    <div>
      <div
        className="c7"
      >
        <span
          className="c3"
        >
          Orders 
          <span
            className="c4 c5"
          >
            <span
              className="c6"
            >
              7
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Badge / NotificationBadge Showcase 1`] = `
.c7 {
  margin-bottom: 4px;
  background-color: transparent;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 10px;
  line-height: 1.6;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c20 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFCF00;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #336BFF;
  height: 24px;
  min-width: 24px;
  border-radius: 24px;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #336BFF;
  height: 16px;
  min-width: 16px;
  border-radius: 16px;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #336BFF;
  height: 32px;
  min-width: 32px;
  border-radius: 32px;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #00D200;
  height: 24px;
  min-width: 24px;
  border-radius: 24px;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #FF1900;
  height: 24px;
  min-width: 24px;
  border-radius: 24px;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #A0A09B;
  height: 24px;
  min-width: 24px;
  border-radius: 24px;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #336BFF;
  height: 8px;
  min-width: 8px;
  border-radius: 8px;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #00D200;
  height: 8px;
  min-width: 8px;
  border-radius: 8px;
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #FF1900;
  height: 8px;
  min-width: 8px;
  border-radius: 8px;
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #A0A09B;
  height: 8px;
  min-width: 8px;
  border-radius: 8px;
}

.c5 {
  padding: 0 6px;
}

.c9 {
  padding: 0 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Default Notification Badge
      </span>
    </div>
    <div>
      <span
        className="c4 c5"
      >
        <span
          className="c6"
        >
          1
        </span>
      </span>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Badge with different sizes
      </span>
    </div>
    <div>
      <div
        className="c7"
      >
        <span
          className="c8 c9"
        >
          <span
            className="c10"
          >
            1
          </span>
        </span>
      </div>
      <div
        className="c7"
      >
        <span
          className="c4 c5"
        >
          <span
            className="c6"
          >
            2
          </span>
        </span>
      </div>
      <div
        className="c7"
      >
        <span
          className="c11 c5"
        >
          <span
            className="c12"
          >
            3
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Custom background colors with children
      </span>
    </div>
    <div>
      <div
        className="c7"
      >
        <span
          className="c13 c5"
        >
          <span
            className="c6"
          >
            2
          </span>
        </span>
      </div>
      <div
        className="c7"
      >
        <span
          className="c14 c5"
        >
          <span
            className="c6"
          >
            3
          </span>
        </span>
      </div>
      <div
        className="c7"
      >
        <span
          className="c15 c5"
        >
          <span
            className="c6"
          >
            4
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Extra small Badge size
      </span>
    </div>
    <div>
      <div
        className="c7"
      >
        <span
          className="c16 "
        />
      </div>
      <div
        className="c7"
      >
        <span
          className="c17 "
        />
      </div>
      <div
        className="c7"
      >
        <span
          className="c18 "
        />
      </div>
      <div
        className="c7"
      >
        <span
          className="c19 "
        />
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Custom text color
      </span>
    </div>
    <div>
      <span
        className="c4 c5"
      >
        <span
          className="c20"
        >
          5
        </span>
      </span>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Badge with large number
      </span>
    </div>
    <div>
      <div
        className="c7"
      >
        <span
          className="c8 c9"
        >
          <span
            className="c10"
          >
            99
          </span>
        </span>
      </div>
      <div
        className="c7"
      >
        <span
          className="c4 c5"
        >
          <span
            className="c6"
          >
            99
          </span>
        </span>
      </div>
      <div
        className="c7"
      >
        <span
          className="c4 c5"
        >
          <span
            className="c6"
          >
            123
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Badge / NotificationBadge Specialized children 1`] = `
.c4 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 10px;
  line-height: 1.6;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  background-color: #336BFF;
  height: 24px;
  min-width: 24px;
  color: #FFFFFF;
  border-radius: 24px;
}

.c6 {
  padding: 0 6px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {
  .c7 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Component as child
      </span>
    </div>
    <div>
      <div
        className="c4"
      >
        <span
          className="c5 c6"
        >
          <span
            className="c7"
          >
            8
          </span>
          <span
            className="c8"
          >
            %
          </span>
        </span>
        <p
          className="c9"
        >
          * It's up to developer to set child component font (family, size, etc.)
        </p>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Function as child
      </span>
    </div>
    <div>
      <div
        className="c4"
      >
        <span
          className="c5 c6"
        >
          <span
            className="c8"
          >
            9%
          </span>
        </span>
        <p
          className="c9"
        >
          * It's up to developer to set child function font (family, size, etc.)
        </p>
      </div>
    </div>
  </div>
</div>
`;
